# qwt

./: .gitignore  CHANGES-6.2  CMakeLists.txt  qwtbuild.pri  qwtconfig.pri
designer/: CMakeLists.txt  designer.pro  qwt_designer_plotdialog.cpp  qwt_designer_plotdialog.h  qwt_designer_plugin.cpp  qwt_designer_plugin.h
examples/: CMakeLists.txt  examples.pro
examples/animation/: CMakeLists.txt  Plot.cpp  Plot.h  animation.pro  main.cpp  plot.cpp  plot.h
examples/barchart/: BarChart.cpp  CMakeLists.txt  barchart.cpp  barchart.h  barchart.pro  main.cpp
examples/bode/: CMakeLists.txt  ComplexNumber.h  MainWindow.cpp  Plot.cpp  bode.pro  complexnumber.h  main.cpp  mainwindow.cpp  mainwindow.h  plot.cpp  plot.h
examples/controls/: CMakeLists.txt  DialBox.cpp  DialBox.h  DialTab.cpp  KnobBox.cpp  KnobTab.cpp  KnobTab.h  SliderBox.cpp  SliderBox.h  SliderTab.cpp  WheelBox.cpp  WheelTab.cpp  WheelTab.h  controls.pro  dialbox.cpp  dialbox.h  dialtab.cpp  dialtab.h  knobbox.cpp  knobbox.h  knobtab.cpp  knobtab.h  main.cpp  sliderbox.cpp  sliderbox.h  slidertab.cpp  slidertab.h  wheelbox.cpp  wheelbox.h  wheeltab.cpp  wheeltab.h
examples/cpuplot/: CMakeLists.txt  CpuPlot.cpp  CpuPlot.h  CpuStat.cpp  CpuStat.h  cpupiemarker.cpp  cpupiemarker.h  cpuplot.cpp  cpuplot.h  cpuplot.pro  cpustat.cpp  cpustat.h
examples/curvdemo1/: curvdemo1.cpp  curvdemo1.pro
examples/curvedemo/: CMakeLists.txt  main.cpp
examples/dials/: AttitudeIndicator.cpp  AttitudeIndicator.h  CMakeLists.txt  CockpitGrid.cpp  CockpitGrid.h  CompassGrid.cpp  CompassGrid.h  SpeedoMeter.cpp  attitude_indicator.cpp  attitude_indicator.h  cockpit_grid.cpp  cockpit_grid.h  compass_grid.cpp  compass_grid.h  dials.cpp  dials.pro  main.cpp  speedo_meter.cpp  speedo_meter.h
examples/distrowatch/: BarChart.cpp  BarChart.h  CMakeLists.txt  barchart.cpp  barchart.h  distrowatch.pro  main.cpp
examples/friedberg/: CMakeLists.txt  Friedberg2007.cpp  Friedberg2007.h  Plot.cpp  Plot.h  friedberg.pro  friedberg2007.cpp  friedberg2007.h  main.cpp  plot.cpp  plot.h
examples/itemeditor/: CMakeLists.txt  Editor.cpp  Editor.h  Plot.cpp  Plot.h  ShapeFactory.cpp  ShapeFactory.h  editor.cpp  editor.h  itemeditor.pro  main.cpp  plot.cpp  plot.h  shapefactory.cpp  shapefactory.h
examples/legends/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Panel.cpp  Panel.h  Plot.cpp  Plot.h  Settings.h  legends.pro  main.cpp  mainwindow.cpp  mainwindow.h  panel.cpp  panel.h  plot.cpp  plot.h  settings.h
examples/oscilloscope/: CMakeLists.txt  CurveData.cpp  CurveData.h  Knob.cpp  MainWindow.cpp  MainWindow.h  Plot.cpp  Plot.h  SamplingThread.cpp  SamplingThread.h  SignalData.cpp  SignalData.h  WheelBox.cpp  WheelBox.h  curvedata.cpp  curvedata.h  knob.cpp  knob.h  main.cpp  mainwindow.cpp  mainwindow.h  oscilloscope.pro  plot.cpp  plot.h  samplingthread.cpp  samplingthread.h  signaldata.cpp  signaldata.h  wheelbox.cpp  wheelbox.h
examples/polardemo/: CMakeLists.txt  MainWindow.cpp  Plot.cpp  Plot.h  PlotBox.cpp  PlotBox.h  SettingsEditor.cpp  SettingsEditor.h  main.cpp  mainwindow.cpp  mainwindow.h  pixmaps.h  plot.cpp  plot.h  polardemo.pro  settingseditor.cpp  settingseditor.h
examples/polarspectrogram/: CMakeLists.txt  Plot.cpp  PlotWindow.cpp  main.cpp  plot.cpp  plot.h  plotwindow.cpp  plotwindow.h  polarspectrogram.pro
examples/radio/: AmplifierBox.cpp  AmplifierBox.h  CMakeLists.txt  MainWindow.cpp  TunerBox.h  ampfrm.cpp  ampfrm.h  main.cpp  mainwindow.cpp  mainwindow.h  radio.cpp  radio.pro  tunerfrm.cpp  tunerfrm.h
examples/rasterview/: CMakeLists.txt  Plot.cpp  main.cpp  plot.cpp  plot.h  rasterview.pro
examples/realtime/: CMakeLists.txt  IncrementalPlot.cpp  MainWindow.cpp  RandomPlot.cpp  RandomPlot.h  ScrollBar.cpp  ScrollBar.h  ScrollZoomer.cpp  ScrollZoomer.h  incrementalplot.cpp  incrementalplot.h  main.cpp  mainwindow.cpp  mainwindow.h  randomplot.cpp  randomplot.h  realtime.pro  scrollbar.cpp  scrollbar.h  scrollzoomer.cpp  scrollzoomer.h
examples/refreshtest/: CMakeLists.txt  CircularBuffer.cpp  MainWindow.cpp  MainWindow.h  Panel.cpp  Panel.h  Plot.cpp  Plot.h  circularbuffer.cpp  circularbuffer.h  main.cpp  mainwindow.cpp  mainwindow.h  panel.cpp  panel.h  plot.cpp  plot.h  refreshtest.pro  settings.h
examples/scatterplot/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Plot.cpp  main.cpp  mainwindow.cpp  mainwindow.h  plot.cpp  plot.h  scatterplot.pro
examples/simpleplot/: CMakeLists.txt  main.cpp  simpleplot.cpp  simpleplot.pro
examples/sinusplot/: CMakeLists.txt  main.cpp  sinusplot.cpp  sinusplot.pro
examples/spectrogram/: CMakeLists.txt  Plot.cpp  Plot.h  main.cpp  plot.cpp  plot.h  spectrogram.pro
examples/splineeditor/: CMakeLists.txt  CanvasPicker.cpp  CanvasPicker.h  Plot.cpp  Plot.h  ScalePicker.cpp  canvaspicker.cpp  canvaspicker.h  main.cpp  plot.cpp  plot.h  scalepicker.cpp  scalepicker.h  splineeditor.pro
examples/stockchart/: CMakeLists.txt  GridItem.cpp  GridItem.h  Legend.cpp  Legend.h  Plot.cpp  QuoteFactory.cpp  griditem.cpp  griditem.h  legend.cpp  legend.h  main.cpp  plot.cpp  plot.h  quotefactory.cpp  quotefactory.h  stockchart.pro
examples/sysinfo/: CMakeLists.txt  main.cpp  sysinfo.cpp  sysinfo.pro
examples/tvplot/: CMakeLists.txt  TVPlot.cpp  main.cpp  tvplot.cpp  tvplot.h  (+1 more)
playground/: CMakeLists.txt
src/: CMakeLists.txt  qwt-config.cmake.in  qwt.cpp  qwt.h  qwt.pc.in  qwt_abstract_legend.cpp  qwt_abstract_legend.h  qwt_abstract_scale.cpp  qwt_abstract_scale.h  qwt_abstract_scale_draw.cpp  qwt_abstract_scale_draw.h  qwt_abstract_slider.cpp  qwt_abstract_slider.h  qwt_analog_clock.cpp  qwt_analog_clock.h  qwt_arrow_button.cpp  qwt_arrow_button.h  qwt_axis.h  qwt_bezier.cpp  qwt_bezier.h  qwt_clipper.cpp  qwt_clipper.h  qwt_color_map.cpp  qwt_color_map.h  qwt_column_symbol.cpp  qwt_column_symbol.h  qwt_compass.cpp  qwt_compass.h  qwt_compass_rose.cpp  qwt_compass_rose.h  qwt_counter.cpp  qwt_counter.h  qwt_curve_fitter.cpp  qwt_curve_fitter.h  qwt_date.cpp  qwt_date.h  qwt_date_scale_draw.cpp  qwt_date_scale_draw.h  qwt_date_scale_engine.cpp  qwt_date_scale_engine.h  (+215 more)
(+94 files in other folders)
