
set(CMAKE_AUTOMOC ON)

if(QWT_PLOT)
  add_subdirectory(animation)
  add_subdirectory(barchart)
  add_subdirectory(cpuplot)
  add_subdirectory(curvedemo)
  add_subdirectory(distrowatch)
  add_subdirectory(friedberg)
  add_subdirectory(itemeditor)
  add_subdirectory(legends)
  add_subdirectory(stockchart)
  add_subdirectory(simpleplot)
  add_subdirectory(sinusplot)
  add_subdirectory(realtime)
  add_subdirectory(refreshtest)
  add_subdirectory(scatterplot)
  add_subdirectory(spectrogram)
  add_subdirectory(rasterview)
  add_subdirectory(tvplot)

  if(QWT_WIDGETS)
    add_subdirectory(bode)
    add_subdirectory(splineeditor)
    add_subdirectory(oscilloscope)
  endif()

  if(QWT_POLAR)
    add_subdirectory(polardemo)
    add_subdirectory(polarspectrogram)
  endif()

endif()

if(QWT_WIDGETS)
  add_subdirectory(sysinfo)
  add_subdirectory(radio)
  add_subdirectory(dials)
  add_subdirectory(controls)
endif()
